# fuzzyblue

./: Cargo.toml
benches/: precompute.rs
examples/: dump.rs
shaders/: aerial_perspective.comp  aerial_perspective.frag  aerial_perspective.h  direct_irradiance.comp  draw_params.h  fullscreen.vert  gathering.comp  indirect_irradiance.comp  inscattering.h  inside.frag  irradiance.h  mapping.h  multiple_scattering.comp  multiscattering.comp  outside.frag  params.h  precompute.h  render_lighting.h  render_sky.frag  render_sky.h  scattering.comp  scattering.h  scattering_density.comp  single_scattering.comp  transmittance.comp  transmittance.h  util.h
src/: lib.rs  precompute.rs  render.rs
tests/: smoke.rs
